mrpt (1:1.5.5-1) unstable; urgency=medium

  * New version of upstream sources.
  * Fix SIGBUS in armhf (Closes: #880388).
  * debian/copyright: Updated to machine-readable format.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Wed, 29 Nov 2017 04:07:35 +0100

mrpt (1:1.5.3-1) unstable; urgency=medium

  * New version of upstream sources.
  * Add signature checking to watch file (fix lintian
    debian-watch-may-check-gpg-signature).
  * Fix GCC hardening flags (Closes: #865735).
  * Fix lintian error license-problem-convert-utf-code.
  * Builds with GCC 7 (Closes: #853563).
  * Remove all debian/patches as they are integrated upstream.
  * debian/copyright: Updated sinceEigen, assimp and octomap are no longer
    shipped in upstream releases.
  * debian/control: Simplify Build-Depends. The previous version was intended
    to be used on both Ubuntu and Debian, but we don't really want several
    alternative ways to build the same package.
  * debian/control: Add "Multi-Arch: same" to library packages.
  * debian/control: Drop obsolete usage of "misc:Pre-Depends" variable.
  * debian/rules: Disable DH_{DEBUG,VERBOSE}.

 -- José Luis Blanco Claraco <joseluisblancoc@gmail.com>  Mon, 21 Aug 2017 00:24:00 +0200

mrpt (1:1.4.0-7) unstable; urgency=medium

  * Fix FTBFS in testing due to unit test crash related to eigenvectors
    calc in Eigen 3.3b1

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Mon, 15 Aug 2016 00:07:29 +0200

mrpt (1:1.4.0-6) unstable; urgency=medium

  * Fix FTBFS with latest eigen 3.3 beta 1 (Closes #834274).
  * Drop build-depends on subversion, no longer needed.

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Sun, 14 Aug 2016 13:51:20 +0200

mrpt (1:1.4.0-5) unstable; urgency=medium

  * Fix FTBFS in mips and other archs.

 -- Jose Luis Blanco (University of Malaga) <joseluisblancoc@gmail.com>  Fri, 22 Jul 2016 15:38:29 +0200

mrpt (1:1.4.0-4) unstable; urgency=medium
